array.island.Island.scala.error
Compilation error:
Island:4: error: type mismatch;
 found   : Unit
 required: Int
  n= num.size
   ^