array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var n=0
  n= num.size
  
}